Arduino version works

--- a/src/arduino/CMakeLists.txt
+++ b/src/arduino/CMakeLists.txt
@@ -1,5 +1,15 @@
 
-file(GLOB_RECURSE ${PROJECT_NAME}_HDRS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
-file(GLOB_RECURSE ${PROJECT_NAME}_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
+set(${PROJECT_NAME}_HDRS 
+  HALArduino.h
+  ArduinoHardwareSerial.h
+  ArduinoProgramMemory.h
+  ArduinoTimeServices.h
+)
+
+set(${PROJECT_NAME}_SRCS 
+  ArduinoHardwareSerial.cpp
+  ArduinoProgramMemory.cpp
+  ArduinoTimeServices.cpp
+)
 
 generate_arduino_library(${PROJECT_NAME})
