--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ project(${PROJECT_NAME} VERSION 1.0.0)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
+include_directories(include)
 add_subdirectory(src/arduino)
