--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,8 +16,7 @@ environment:
 
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
-  - pip.exe install git+https://github.com/anton-matosov/conan.git@develop --upgrade
-  - pip.exe install conan_package_tools
+  - pip.exe install conan conan_package_tools --upgrade
   - conan user # It creates the conan data directory
 
 test_script:
