Add non docker linux build to test arduino build on linix

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ matrix:
    include:
       - <<: *linux
         env: CONAN_GCC_VERSIONS=7 CONAN_DOCKER_IMAGE=conanio/gcc7
+   
+      - <<: *linux
 
       - <<: *osx
         osx_image: xcode10
