--- a/src/arduino/CMakeLists.txt
+++ b/src/arduino/CMakeLists.txt
@@ -1,15 +1,12 @@
+set(${PROJECT_NAME}_HDRS
+    HALArduino.h
+    ArduinoHardwareSerial.h
+    ArduinoProgramMemory.h
+    ArduinoTimeServices.h)
 
-set(${PROJECT_NAME}_HDRS 
-  HALArduino.h
-  ArduinoHardwareSerial.h
-  ArduinoProgramMemory.h
-  ArduinoTimeServices.h
-)
-
-set(${PROJECT_NAME}_SRCS 
-  ArduinoHardwareSerial.cpp
-  ArduinoProgramMemory.cpp
-  ArduinoTimeServices.cpp
-)
+set(${PROJECT_NAME}_SRCS
+    ArduinoHardwareSerial.cpp
+    ArduinoProgramMemory.cpp
+    ArduinoTimeServices.cpp)
 
 generate_arduino_library(${PROJECT_NAME})
