--- a/test_package/arduino/CMakeLists.txt
+++ b/test_package/arduino/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 project(PackageTest CXX)
 
-generate_arduino_firmware(${PROJECT_NAME}
-        SKETCH example.ino
-#        ARDLIBS StandardCplusplus
-        )
+generate_arduino_firmware(${PROJECT_NAME} SKETCH example.ino
+                          # ARDLIBS StandardCplusplus
+                          )
