use full path instead of dot

--- a/src/arduino/CMakeLists.txt
+++ b/src/arduino/CMakeLists.txt
@@ -11,4 +11,4 @@ set(${PROJECT_NAME}_SRCS
 
 generate_arduino_library(${PROJECT_NAME})
 
-target_include_directories(${PROJECT_NAME} PUBLIC .)
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
